--- a/umap/templates/umap/design_system.html
+++ b/umap/templates/umap/design_system.html
@@ -301,6 +301,15 @@
             </form>
           </fieldset>
         </details>
+        <details open>
+          <summary>With tabs</summary>
+          <div class="flat-tabs" data-ref="tabs">
+            <button class="flat on" data-ref="recent">Récents</button>
+            <button class="flat" data-ref="symbols">Symbole</button>
+            <button class="flat" data-ref="chars">Emoji &amp; texte</button>
+            <button class="flat" data-ref="url">URL</button>
+          </div>
+        </details>
       </div>
       <h4>Importers</h4>
       <div class="umap-dialog window importers dark">
