feat: add experimental line decoration support
fix #318

Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/templates/umap/js.html
+++ b/umap/templates/umap/js.html
@@ -34,6 +34,8 @@
 <script src="{% static 'umap/vendors/iconlayers/iconLayers.js' %}" defer></script>
 <script src="{% static 'umap/vendors/locatecontrol/L.Control.Locate.min.js' %}"
         defer></script>
+<script src="{% static 'umap/vendors/textpath/leaflet.textpath.js' %}"
+        defer></script>
 <script src="{% static 'umap/vendors/simple-statistics/simple-statistics.min.js' %}"
         defer></script>
 <script src="{% static 'umap/js/umap.core.js' %}" defer></script>
