--- a/umap/static/umap/base.css
+++ b/umap/static/umap/base.css
@@ -3,7 +3,7 @@
 */
 body, div, ul, ol, li, a, section, nav,
 h1, h2, h3, h4, h5, h6, label,
-hr, input, textarea, select {
+hr, input, textarea, select, button {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -88,7 +88,6 @@ hgroup button {
     margin: 0;
 }
 
-
 /*
 * List
 */
@@ -99,6 +98,9 @@ ul {
 }
 dt {
     font-weight: bold;
+}
+dd {
+    margin: 0;
 }
 
 /* ************************************************* */
