chore: add external resources links in help dialog
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -468,6 +468,9 @@ ul.photon-autocomplete {
     width: 100%;
     margin-bottom: var(--text-margin);
 }
+.umap-help-links li {
+    margin-bottom: var(--text-margin);
+}
 .umap-help {
     font-style: italic;
 }
