--- a/umap/static/umap/css/importers.css
+++ b/umap/static/umap/css/importers.css
@@ -59,6 +59,10 @@
 .importers ul .banfr:before {
     background-image: url(../img/importers/banfr.svg);
 }
+.importer.opendata h3:before,
+.importers ul .opendata:before {
+    background-image: url(../img/importers/opendata.svg);
+}
 .importer table {
     width: calc(var(--dialog-width) - 2 * var(--box-margin));
 }
