--- a/umap/templates/umap/dashboard_menu.html
+++ b/umap/templates/umap/dashboard_menu.html
@@ -7,6 +7,8 @@
     {% else %}
       <a href="{% url 'user_dashboard' %}">{% trans "My Maps" %}</a>
     {% endif %}
+    <a {% if selected == "templates" %}class="selected"{% endif %}
+       href="{% url 'user_templates' %}">{% trans "My templates" %}</a>
     {% if UMAP_ALLOW_EDIT_PROFILE %}
       <a {% if selected == "profile" %}class="selected"{% endif %}
          href="{% url 'user_profile' %}">{% trans "My profile" %}</a>
