chore: move modal to a dedicated web component
Also, fix a bug related to _leafletMap.invalidateSize.

Co-authored-by: Yohan Boniface <yohanboniface@free.fr>

--- a/umap/templates/umap/js.html
+++ b/umap/templates/umap/js.html
@@ -41,4 +41,5 @@
 <script src="{% static 'umap/js/umap.core.js' %}" defer></script>
 <script src="{% static 'umap/js/umap.controls.js' %}" defer></script>
 <script type="module" src="{% static 'umap/js/components/fragment.js' %}" defer></script>
+<script type="module" src="{% static 'umap/js/components/modal.js' %}" defer></script>
 {% endautoescape %}
