--- a/umap/templates/umap/map_table.html
+++ b/umap/templates/umap/map_table.html
@@ -35,24 +35,24 @@
               <a href="{{ map_inst.get_absolute_url }}">{{ map_inst.name }}</a>
             </th>
             <td>
-              {{ map_inst.preview_settings|json_script:unique_id }}
-              <button class="map-icon map-opener"
-                      data-map-id="{{ unique_id }}"
-                      title="{% translate "Open preview" %}">
-                <span class="icon-dashboard icon-view"></span>
-                <span class="sr-only">{% translate "Open preview" %}</span>
-              </button>
-              <dialog>
-                <form method="dialog">
-                  <div id="{{ unique_id }}_target" class="map_fragment">
-                  </div>
-                  <p class="close-dialog">
-                    <button class="button" type="submit">
-                      Close
-                    </button>
-                  </p>
-                </form>
-              </dialog>
+              <umap-modal data-settings='{{ map_inst.preview_settings|dumps|escape }}' data-map-id="{{ unique_id }}">
+                <button class="map-icon map-opener"
+                        title="{% translate "Open preview" %}">
+                  <span class="icon-dashboard icon-view"></span>
+                  <span class="sr-only">{% translate "Open preview" %}</span>
+                </button>
+                <dialog>
+                  <form method="dialog">
+                    <div id="{{ unique_id }}_target" class="map_fragment">
+                    </div>
+                    <p class="close-dialog">
+                      <button class="button" type="submit">
+                        Close
+                      </button>
+                    </p>
+                  </form>
+                </dialog>
+              </umap-modal>
             </td>
             <td>
               {{ map_inst.get_share_status_display }}
