--- a/umap/static/umap/css/form.css
+++ b/umap/static/umap/css/form.css
@@ -225,6 +225,7 @@ input[value]:invalid {
 }
 details {
     margin-bottom: 5px;
+    margin-top: 5px;
     border-start-start-radius: 4px;
     border-start-end-radius: 4px;
 }
