chore: make the drag handle visible only on hover
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/icon.css
+++ b/umap/static/umap/css/icon.css
@@ -122,6 +122,11 @@ html[dir="rtl"] .icon {
     background-position: calc(var(--tile) * 3) calc(var(--tile) * 3);
     cursor: move;
     float: inline-end;
+    visibility: hidden;
+}
+
+.orderable:hover .icon-drag {
+    visibility: visible;
 }
 
 .icon-empty {
