feat: display layer rules in caption
Also allow to add a human name to a rule

This is very basic:
- does not cover global rules (at map level)
- does not render other styles than color and iconUrl
- does not deal with interactions (like showing adding
  features for a given rule)

cf #2748

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -841,6 +841,13 @@ a.umap-control-caption,
     text-align: center;
 }
 
+.rules-caption .color-box {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    margin-right: var(--text-margin);
+    vertical-align: middle;
+}
 
 /* ************* */
 /* Marker's Icon */
