wip: use z-index to separate paths and markers (not working)

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -58,6 +58,13 @@ html[dir="rtl"] .leaflet-tooltip-pane>* {
     bottom: var(--current-footer-height);
 }
 
+.umap-paths-pane {
+    z-index: var(--zindex-paths);
+}
+
+.umap-markers-pane {
+    z-index: var(--zindex-markers);
+}
 
 /* *********** */
 /* Controls    */
