--- a/umap/templates/umap/js.html
+++ b/umap/templates/umap/js.html
@@ -48,3 +48,5 @@
 <script src="{% static 'umap/js/umap.controls.js' %}" defer></script>
 <script src="{% static 'umap/js/umap.js' %}" defer></script>
 <script src="{% static 'umap/js/components/fragment.js' %}" defer></script>
+<!-- Added by Univie DOST5 10-01-2025 -->
+<script src="{% static 'umap/js/components/univieadj.js' %}" defer></script>
