a11y: set the lang attribute to the html tag
Thanks @djst5 for the indirect fix!

--- a/umap/templates/base.html
+++ b/umap/templates/base.html
@@ -1,7 +1,10 @@
 {% load umap_tags i18n static %}
 
+{% get_current_language as LANGUAGE_CODE %}
+
 <!DOCTYPE html>
-<html {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
+<html {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}
+      lang="{{ LANGUAGE_CODE }}">
   <head>
     <title>
       {% block head_title %}
