--- a/umap/static/umap/css/icon.css
+++ b/umap/static/umap/css/icon.css
@@ -197,6 +197,10 @@ html[dir="rtl"] .icon {
     background-position: calc(var(--tile) * 8) var(--tile);
 }
 
+.icon-merge {
+    background-position: calc(var(--tile) * 4) calc(var(--tile) * 4);
+}
+
 .icon-multipolygon {
     background-position: calc(var(--tile) * 7) calc(var(--tile) * 5);
 }
